syntax = "proto3";

package api.periodictask.v1;

option go_package = "periodic-task/api/periodictask/v1;v1";
option java_multiple_files = true;
option java_package = "api.periodictask.v1";

message _Json {
	bytes json = 1;
}

service PeriodicTask {
	rpc ServiceRegistry (ServiceRegistryRequest) returns (ServiceRegistryReply);
	rpc CreatePeriodicTaskQueue (CreatePeriodicTaskQueueRequest) returns (CreatePeriodicTaskQueueReply);
	rpc StartPeriodicTaskQueue (StartPeriodicTaskQueueRequest) returns (StartPeriodicTaskQueueReply);
	rpc CreateTask (CreateTaskRequest) returns (CreateTaskReply);
	rpc GetTaskList (GetTaskListRequest) returns (GetTaskListReply);
	rpc CompleteTask (CompleteTaskRequest) returns (CompleteTaskReply);
}

message ServiceRegistryRequest {
	string service_name = 1;
}
message ServiceRegistryReply {
	string secret = 1;
}

message CreatePeriodicTaskQueueRequest {
	string service_name = 1;
	string secret = 2;
	string queue_name = 3;
}
message CreatePeriodicTaskQueueReply {
	bool success = 1;
}

message StartPeriodicTaskQueueRequest {
	string service_name = 1;
	string secret = 2;
	string queue_name = 3;
}
message StartPeriodicTaskQueueReply {
	bool success = 1;
}

message CreateTaskRequest {
	string service_name = 1;
	string secret = 2;
	string queue_name = 3;
	string task_type = 4;
	_Json task_data = 5;
}
message CreateTaskReply {
	bool success = 1;
}

message GetTaskListRequest {
	string service_name = 1;
	string secret = 2;
	string queue_name = 3;
	uint32 limit = 4;
}
message GetTaskListReply {
	_Json task_list = 1;
}

message CompleteTaskRequest {
	string service_name = 1;
	string secret = 2;
	string queue_name = 3;
	uint64 task_id = 4;
	bool success = 5;
}
message CompleteTaskReply {
	bool success = 1;
}
